Fixed z-index issue

--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -103,6 +103,7 @@
   }
 
   ul[role="menubar"] ul[role="menu"] {
+    z-index: 1;
     padding: 0;
     position: absolute;
     margin: 0;
